# Team_maruti_R520251199

./: .gitignore  LANE_DETECTION_INSTRUCTIONS.md  README.md  README_ASTRA_LANE_DETECTION.md  SHARP_TURN_DETECTION.md  index.html  one.py  requirements.txt  run_astra_lane_detection.sh  start_lane_detection.sh  test_astra_camera.sh  test_camera.sh  tune_lane_detection.sh
BeetleDashboard/: README.md  app.py  fake_sender.py  find_ports.py  main.cpp  requirements.txt  run_commands.txt  serial_reader.py  testCurl.txt
BeetleDashboard/esp32_sensor_test/: WIRING_GUIDE.md  esp32_sensor_test.ino  i2c_scanner.ino  simple_test.ino
BeetleDashboard/sensors/: encoder.cpp  mpu.cpp  tof.cpp  withoutTof.cpp
BeetleDashboard/sensors/allSensors/: allSensors.ino
BeetleDashboard/templates/: index.html  viewer.html
Log/: OrbbecSDK.log.txt
PS5/: PS5.cpp  README.md
install/: local_setup.sh  setup.sh
install/auto_nav/lib/auto_nav/: cmd_vel_mux  esp32_auto_bridge
install/auto_nav/share/auto_nav/: package.sh
install/custom_follow/lib/custom_follow/: esp32_bridge  infer_node
install/custom_follow/share/custom_follow/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/keyboard_teleoperation/lib/keyboard_teleoperation/: esp32_cmd_bridge  keyboard_teleop
install/keyboard_teleoperation/share/keyboard_teleoperation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/keyboard_teleoperation/share/keyboard_teleoperation/firmware/: esp32_keyboard_bridge.ino
install/keyboard_teleoperation/share/keyboard_teleoperation/launch/: esp32_bridge.launch.py
install/lane_detection/lib/lane_detection/: lane_detection_node  multi_view_visualizer  pointcloud_processor
install/lane_detection/share/lane_detection/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/orbbec_camera/include/libobsensor/: ObSensor.h  ObSensor.hpp
install/orbbec_camera/include/magic_enum/: magic_enum.hpp
install/orbbec_camera/include/orbbec_camera/: constants.h  d2c_viewer.h  dynamic_params.h  image_publisher.h  jetson_nv_decoder.h  jpeg_decoder.h  ob_camera_node.h  ob_camera_node_driver.h  ob_lidar_node.h  rk_mpp_decoder.h  ros_param_backend.h  synced_imu_publisher.h  utils.h
install/orbbec_camera/lib/: libOrbbecSDK.so.2
install/orbbec_camera/lib/orbbec_camera/: 435le_example_node  common_benchmark_node.py  frame_latency_node  image_sync_example_node  list_camera_profile_mode_node  list_depth_work_mode_node  list_devices_node  multi_save_rgbir_node  ob_benchmark_node  orbbec_camera_node  service_benchmark_node  set_device_ip  start_benchmark_node  topic_statistics_node
install/orbbec_camera/share/orbbec_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/orbbec_camera_msgs/share/orbbec_camera_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/orbbec_description/share/orbbec_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
log/: latest_build
rover_control/: package.xml  setup.cfg  setup.py
rover_control/rover_control/: camera_publisher.py  final_lane.py  hard_core.py  hsv_calculator.py  hsv_calibrator.py  keyboard_teleop.py  lane_follower.py  serial_pwm_controller.py  serial_teleop.py
rover_serial/: README.md  package.xml  setup.cfg  setup.py
rover_serial/rover_serial/: esp_serial.py
src/auto_nav/: README.md  package.xml  setup.py
src/auto_nav/auto_nav/: cmd_vel_mux_node.py  esp32_bridge_node.py
src/auto_nav/launch/: auto_nav_bringup.launch.py
src/custom_follow/: collect_data.py  package.xml  setup.cfg  setup.py  train.py  train_v2.py
src/custom_follow/custom_follow/: lane_following.code-workspace
src/keyboard_teleoperation/: README.md  setup.py
src/lane_detection/: LaneDetect_AstraCam.py  calibrate_shapes.py  kayro.py  motor_driver_node.py  rgb_to_grey.py  simple_line_follow.py
(+471 files in other folders)
