<?xml version="1.0"?>
<package format="3">
  <name>auto_nav</name>
  <version>0.1.0</version>
  <description>Autonomous navigation hardware bridge with cmd_vel multiplexing for auto and keyboard control.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>custom_follow</exec_depend>
  <exec_depend>keyboard_teleoperation</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
